@@ -2853,3 +2853,6 @@ Fixed issue with zero radiation values in gensdaymtx (TW).
 
 Fixed issues with rtpict running under Windows.  Thanks to Mehlika
 Inanici for help finding problems and testing.
+
+Added metadata i/o to ra_bmp in both directions, preserving
+color space, gamma, and typical Radiance header settings.
